# android-dev

./: README.md
【07】NDK/Cheat Engine 6.3/: CE修改器中文版6.3_ 西西软件下载.url  CheatEngine.chm  Kernelmoduleunloader.exe.sig  cheatengine-i386.exe.sig  cheatengine-x86_64.exe.sig  commonmodulelist.txt  dbk32.sys  dbk64.sys  defines.lua  main.lua  vmdisk.img  vmdisk.img.sig  不显示中文请注意.txt
【07】NDK/Cheat Engine 6.3/languages/: cheatengine-x86_64.po  tutorial-x86_64.po
【07】NDK/fmod资料大全/: fmod官网.txt
【07】NDK/（01）2021.2.23 C语言-指针入门与基本数据类型/CProject/: CMakeLists.txt  T1.c  T2.c  T3.c  T4.c  T5.c  T6.c  T7.c  T8.c
【07】NDK/（02）2021.2.25 函数指针与指针运算（NDK第二节课）/CProject/: CMakeLists.txt  T1.c  T2.c  T4.c  T5.c  T8.c  T9.c
【07】NDK/（03）2021.2.28 静态开辟内存与动态开辟内存（NDK第三节课）/CProject/: CMakeLists.txt  T1.c  T2.c  T3.c  T4.c  T5.c
【07】NDK/（04）2021.3.2指针实战运用进阶之字符串操作（NDK第四节课）/CLionCProject/: CMakeLists.txt  T1.c  T2.c  T3.c  T4.c  T5.c  T6.c
【07】NDK/（05）2021.3.4结构体与结构体指针数组（NDK第五节课）/ClionCProject/: CMakeLists.txt  T1.c  T10.c  T11.c  T2.c  T3.c  T4.c  T5.c  T6.c  T7.c  T8.c  T9.c
【07】NDK/（06）2021.3.7C语言游戏破解器与文件加解密（NDK第六节课）/ClionCProject/: CMakeLists.txt  T1.c  T10.c  T11.c  T2.c  T3.c  T4.c  T5.c  T6.c  T7.c  T8.c  T9.c
【07】NDK/（07）2021.3.9C++语言学习之面向对象（NDK第七节课）/ClionCPP/: CMakeLists.txt  Student.cpp  Student.h  T1.cpp  T10.cpp  T11.cpp  T2.c  T3.c  T4.cpp  T5.cpp  T6.cpp  T7.c  T8.cpp  T9.cpp
【07】NDK/（08）2021.3.11 C++语言类中各个重要函数原理（NDK第八节课）/ClionCPP/: CMakeLists.txt  T1.cpp  T2.cpp  T4.cpp  T5.cpp
【07】NDK/（09）2021.3.14 C++浅拷贝与深拷贝的原理（NDK第九节课）/CPPProject/: CPPProject.sln
【07】NDK/（10）2021.3.16 C++语言之this原理与友元函数友元类（NDK第十节课）/ClionCPPProject/: CMakeLists.txt  Pig.cpp  Pig.h  T1.cpp  T2.cpp  T3.cpp  T4.cpp  T5.cpp  T6.cpp  T7.cpp  T8.cpp  T9.cpp
【07】NDK/（11）2021.3.18 C++面向对象继承与操作符重载/ClionCpp/: CMakeLists.txt  T1.cpp  T2.cpp  T3.cpp  T4.cpp  T5.cpp  T6.cpp  T7.cpp
【07】NDK/（12）2021.3.23 C++二义性,多态,纯虚函数,模版函数（NDK第十二节课）/CPPProject/: CMakeLists.txt  T1.cpp  T2.cpp  T3.cpp  T4.cpp  T5.cpp  T6.cpp  (+3 more)
【07】NDK/（16）2021.4.6 C++高级之引用进阶与多线程（NDK第十六节课）/CPPClionProject/: CMakeLists.txt  T2.cpp  T3.cpp  T4.cpp  T6.cpp  T8.cpp
【07】NDK/（17）2021.4.8 C++高级之手写智能指针与类型转换（NDK第十七节课）/: 手写智能指针--21.4.8.md
【07】NDK/（19）2021.4.13 JNI技术之C++层玩转Java层的对象（NDK第十九节课）/: JNI技术之C++层玩转Java层的对象（NDK第十九节课） 笔记.md
【07】NDK/（20）2021.4.15 JNI技术之QQ语言变声实现/AS_JNI_ProjectKT/app/src/main/cpp/: CMakeLists.txt  com_derry_as_jni_projectkt_MainActivity.h  native-lib.cpp
【07】NDK/（21）2021.4.18号—JNI技术之动态注册与JNI线程实战/: JNI技术之动态注册与JNI线程实战（NDK第二十一节课）.md
(+144 files in other folders)
